--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,12 @@
+#Combine CSS
+<IfModule pagespeed_module>
+  ModPagespeed on
+  ModPagespeedEnableFilters rewrite_css,combine_css
+  ModPagespeedEnableFilters recompress_images
+  ModPagespeedEnableFilters convert_png_to_jpeg,convert_jpeg_to_webp
+  ModPagespeedEnableFilters collapse_whitespace,remove_comments
+</IfModule>
+
 #Redirection HTTPS
 <IfModule mod_rewrite.c>
 RewriteEngine On
